--- a/ProjetTask_2/Presentation/Views/MainWindow.xaml
+++ b/ProjetTask_2/Presentation/Views/MainWindow.xaml
@@ -1,13 +1,15 @@
-﻿<Window x:Class="View.MainWindow"
+﻿<Window x:Class="View.Views.MainWindow"
         xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:View"
         xmlns:views="clr-namespace:View.Views"
         xmlns:vms="clr-namespace:View.ViewModels"
         mc:Ignorable="d"
         Title="Library" Height="450" Width="800">
+    <Window.DataContext>
+        <vms:MainViewModel />
+    </Window.DataContext>
     <Grid Margin="20 20" MaxWidth="600">
         <Grid.Resources>
             <DataTemplate DataType="{x:Type vms:StartingViewModel}">
